force-app/main/default/objects/AlternativaQuestao__c/AlternativaQuestao__c.object-meta.xml
<CustomObject>
    <label>Alternativa de Questão</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alternativas de Questão</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>