force-app/main/default/objects/AlternativaQuestao__c/fields/AlternativaCorreta__c.field-meta.xml
<CustomField>
    <fullName>AlternativaCorreta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alternativa Correta</label>
    <type>Checkbox</type>
</CustomField>