force-app/main/default/objects/AlternativaQuestao__c/fields/ExplicacaoAlternativa__c.field-meta.xml
<CustomField>
    <fullName>ExplicacaoAlternativa__c</fullName>
    <label>Explicação da Alternativa</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>