force-app/main/default/objects/AlternativaQuestao__c/fields/Questao__c.field-meta.xml
<CustomField>
    <fullName>Questao__c</fullName>
    <label>Questão</label>
    <referenceTo>Questao__c</referenceTo>
    <relationshipLabel>Alternativas</relationshipLabel>
    <relationshipName>Alternativas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>