force-app/main/default/objects/AlternativaQuestao__c/fields/TextoAlternativa__c.field-meta.xml
<CustomField>
    <fullName>TextoAlternativa__c</fullName>
    <label>Texto da Alternativa</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>